--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>Jessa X Gary</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,11 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Jessa x Gary</h1>
+							<p class="major" align="center">
+								It's finally happening! Join us for our wedding.<br>
+								02 - 10 - 2022<br>
+							</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -34,50 +37,83 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Ceremony</h2>
+							<h3><b>Thursday, 4:00pm - Chapel on the Hill</b></h3>
+							<p align="left">
+								Situated on a hilltop overlooking Mount Batulao in Mary Help of Christians Center of Spirituality (Don Bosco Batulao) , Brgy. Cahil, Calaca Batangas </p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="http://donboscobatulao.org/weddings.html" class="button" target="_blank">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/Chapel on the Hill.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Cocktails and Reception</h2>
+							<h3>6:00pm - Sonya's Garden</h3>
+							<p align="left">
+							<i>"Of all the sounds heard at Sonya’s Garden,<br>nothing is as convivial as that of celebrations."<br></i><br>
+							For us, we will be at the Sunflower Hall (beside Proposal Garden) located at Barangay Buck Estate, Alfonso, Cavite, PH</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://sonyasgarden.com" class="button" target="_blank">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/SunflowerHall.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
+							<h2>Attire</h2>
+								<p align="left">Please be on proper formal attire. In shades of black/black with bit of white/dark gray<br><br>
+								<b>Gentlemen</b><br>
+								Black suit, sports coat, collared black/white polo and long sleeves.<br>
+								<i>(No tshirt/polo shirt and jeans)</i><br>
+								<b>Ladies</b><br>
+								Floor length gown, knee-length cocktail or dressy separates<br>
+								<i>(No long gowns, beaded, shiny and sparkling dresses)</i><br>
+							</p>
+							<!-- <ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/Attire.jpg" alt="" />
 						</div>
+					</section>
+
+					<!-- Four.Five -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Gift Registry</h2>
+								<p align="left">You are probably thinking of a present you'll need to bring,
+									to save you shopping, sit back and rest,
+									a gift of currency is our request.
+									Dont go overboard or rob any banks, any amount will make us smile in thanks! 
+							</p>
+							<!-- <ul class="actions stacked">
+								<li><a href="#" class="button">Learn More</a></li>
+							</ul> -->
+						<!-- </div>
+						<div class="image">
+							<img src="images/Attire.jpg" alt="" />
+						</div> -->
 					</section>
 
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Gift Registry</h2>
+							<p>You are probably thinking of a present you'll need to bring,
+								to save you shopping, sit back and rest,
+								a gift of currency is our request.
+								Dont go overboard or rob any banks, any amount will make us smile in thanks! </p>
 						</div>
 
 						<!-- Gallery -->
@@ -230,7 +266,7 @@
 
 					</section>
 
-				<!-- Six -->
+				<!-- Six
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Ipsum sed consequat</h2>
@@ -298,7 +334,7 @@
 								</section>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
@@ -331,11 +367,11 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<!-- <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
+								<!-- <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li> -->
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
