--- a/index.html
+++ b/index.html
@@ -89,179 +89,132 @@
 					</section>
 
 					<!-- Four.Five -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Gift Registry</h2>
+							<h2>Gift Registry and RSVP</h2>
 								<p align="left">You are probably thinking of a present you'll need to bring,
 									to save you shopping, sit back and rest,
 									a gift of currency is our request.
 									Dont go overboard or rob any banks, any amount will make us smile in thanks! 
 							</p>
+								<p align="left">The favor of your reply is requested by <b><u><i>January 10 2022</i></u></b>.<br><br>
+									Please contact <b>Jenine C. Advincula / Jayzon Louies B. Mijares</b><br>
+									<b>Email: </b>jessaxgary@gmail.com<br>
+								<b>Mobile:</b>+639475847783/+639995431653
+							</p>
 							<!-- <ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul> -->
-						<!-- </div>
+						</div>
 						<div class="image">
-							<img src="images/Attire.jpg" alt="" />
-						</div> -->
+							<img src="images/RSVP.jpg" alt="" />
+						</div>
 					</section>
 
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Gift Registry</h2>
-							<p>You are probably thinking of a present you'll need to bring,
-								to save you shopping, sit back and rest,
-								a gift of currency is our request.
-								Dont go overboard or rob any banks, any amount will make us smile in thanks! </p>
+							<h2>Fun Facts </h2>
+							<p>orem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 						</div>
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+										<img src="images/gallery/thumbs/01.jpg" alt=""/>
 									</a>
-									<div class="caption">
+									<!-- <div class="caption">
 										<h3>Ipsum Dolor</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
-									</div>
+									</div> -->
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+									<a href="images/gallery/fulls/02.jpg" class="image">	
+										<img src="images/gallery/thumbs/02.jpg" alt=""/>
 									</a>
-									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
+									<a href="images/gallery/fulls/03.jpg" class="image">	
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/04.jpg" class="image">
 										<img src="images/gallery/thumbs/04.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
+									<a href="images/gallery/fulls/05.jpg" class="image">	
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/06.jpg" class="image">
 										<img src="images/gallery/thumbs/06.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/07.jpg" class="image">
 										<img src="images/gallery/thumbs/07.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/08.jpg" class="image">
 										<img src="images/gallery/thumbs/08.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/09.jpg" class="image">
 										<img src="images/gallery/thumbs/09.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/10.jpg" class="image">
 										<img src="images/gallery/thumbs/10.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/11.jpg" class="image">
 										<img src="images/gallery/thumbs/11.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
+									<a href="images/gallery/fulls/12.jpg" class="image">	
 										<img src="images/gallery/thumbs/12.jpg" alt="" />
 									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
 								</article>
+								<article>
+									<a href="images/gallery/fulls/13.jpg" class="image">
+										<img src="images/gallery/thumbs/13.jpg" alt="" />
+									</a>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/14.jpg" class="image">
+										<img src="images/gallery/thumbs/14.jpg" alt="" />
+									</a>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/15.jpg" class="image">	
+										<img src="images/gallery/thumbs/15.jpg" alt="" />
+									</a>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/16.jpg" class="image">
+										<img src="images/gallery/thumbs/16.jpg" alt="" />
+									</a>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/17.jpg" class="image">
+										<img src="images/gallery/thumbs/17.jpg" alt="" />
+									</a>
+								</article>
+
+
+								
 							</div>
 
 					</section>
