--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/jessaxgaryBW.jpg" alt="" />
 						</div>
 					</section>
 
@@ -114,8 +114,8 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Fun Facts </h2>
-							<p>orem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+							<h2>Curiously Enough</h2>
+							<p>Things you might and might not know about us.</p>
 						</div>
 
 						<!-- Gallery -->
@@ -124,27 +124,48 @@
 									<a href="images/gallery/fulls/01.jpg" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt=""/>
 									</a>
-									<!-- <div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<div class="caption">
+										<h3>Places To Places</h3>
+										<p>We both love to travel!</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
-									</div> -->
+									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/02.jpg" class="image">	
 										<img src="images/gallery/thumbs/02.jpg" alt=""/>
 									</a>
+									<div class="caption">
+										<h3>Legit Valid ID</h3>
+										<p>We are license holders.</p>
+										<ul class="actions fixed">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/03.jpg" class="image">	
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
+									<div class="caption">
+										<h3>PH Parts Unknown</h3>
+										<p>Exotic and rare foods? Can eat those everyday.</p>
+										<ul class="actions fixed">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
 								</article>
 								<article>
 									<a href="images/gallery/fulls/04.jpg" class="image">
 										<img src="images/gallery/thumbs/04.jpg" alt="" />
+										<div class="caption">
+											<h3>Essential Oil Connoisseur</h3>
+											<p>Purest of the pure. More organic and natural, the better</p>
+											<ul class="actions fixed">
+												<li><span class="button small">Details</span></li>
+											</ul>
+										</div>
 									</a>
 								</article>
 								<article>
